resources/ej2-base/releasenotes/UWP/Release-Notes/v18.2.0.53/SfRichTextBoxAdv.md
## SfRichTextBoxAdv

### Bug Fixes
{:#sfrichtextboxadv-bug-fixes}

* \#286377 - Argument exception will no longer be thrown on scrolling while opening document asynchronously.
* \#285856 - Text inserted is now properly added to the existing span instance at the cursor position.
* \#283022 - Argument exception will no longer be thrown while opening Word document with large content in header footer.
* \#281335 - Table cells containing no paragraphs are now preserved properly.
* \#281337, \#288092 - Table column width is now calculated properly while opening Word document.
* \#285856, \#F152893 - White-space between the words are now preserved properly while saving as HTML.
* \#281043 - Content becomes visible properly while scrolling in continuous layout mode.
* \#274886 - Application will no longer crashes while typing continuously and deleting text by holding backspace.
* \#284407 - Touch keyboard is not shown automatically on tablet mode.
* Exception will no longer be thrown while applying character format at the end of paragraph.